# TorConsensus

./: README.md
TorConsenus/Tor-Consensus/tor/ftdc_prototype/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  start.sh
TorConsenus/Tor-Consensus/tor/ftdc_prototype/dashboard/: __init__.py  data_generator.py  data_loader.py  main.py  model_trainer.py  styles.py  visualizations.py
TorConsenus/Tor-Consensus/tor/ftdc_prototype/dashboard/components/: __init__.py  investigation.py  origin_tab.py  pcap_ui.py  sidebar.py  ui.py
TorConsenus/Tor-Consensus/tor/ftdc_prototype/ftdc/: __init__.py  ai_risk_engine.py  comprehensive_analysis.py  config.py  consensus.py  correlation.py  database.py  extractor.py  infer_risk.py  node_correlation.py  orchestrator.py  origin_ip_approximator.py  path.py  realtime_capture.py  recommendations.py  report_generator.py  train_model.py  visualization.py
TorConsenus/Tor-Consensus/tor/ftdc_prototype/ftdc/results/: 0a167906-b6f9-4e7f-82a9-6bf4e7b3ae11_report.html  0f5a0a82-1310-41b6-9260-b03daf419472_report.html  14e9f570-d0db-41be-a35d-abc5447898ef_report.html  1a885460-b375-4883-8f8f-e55a530faa3f_report.html  1ce68ea6-ec91-4961-93bf-cffc37890d3f_report.html  2d597db9-5d92-4d43-b111-cb4879678ea5_report.html  5d1a1e29-a8fe-468b-bc55-ce4475f7c7e2_report.html  6d7c4e5c-1bf2-483f-838c-a21637db788b_report.html  81f21017-8d48-4d27-b14d-3eed357f4e30_report.html  a72f99de-dfbc-441d-bcb4-fec4dd1f861d_report.html  d71c313d-cfe3-4657-9fbc-5440d0b169d2_report.html  d9ebf848-2707-4351-939c-ac8faf7b0819_report.html  (+2 more)
(+1 files in other folders)
