[metadata]
name = ftdc-prototype
version = 0.1.0
description = FTDC Tor traffic correlation prototype
long_description = file: README.md
long_description_content_type = text/markdown
author = FTDC Research Team
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    streamlit>=1.20.0
    scapy
    numpy
    scipy
    matplotlib
    plotly
    requests

[options.entry_points]
console_scripts =
    ftdc-dashboard = streamlit_dashboard.app:main
